--- a/Project/Code/ReadMe
+++ b/Project/Code/ReadMe
@@ -1,1 +1,8 @@
+Code folder for hosting code for a Data Science Project
+
+This folder hosts all code for a data science project. It has three sub-folders, belonging to 3 stages of the Data Science Lifecycle:
+
+    Data_Prep (Data_Acquisition_and_Understanding)
+    Modeling
+    Deployment
 
