--- a/Project/Docs/ReadMe
+++ b/Project/Docs/ReadMe
@@ -2,7 +2,7 @@ Folder for hosting all documents for a Data Science Project
 
 Documents will contain information about the following
 
-    Data dictionaries (/Data_Reports)
+    Data dictionaries (/Data_Report)
     Reports related to data understanding, modeling
     Project management and planning docs
     Docs and presentations prepared to share information about the project
