--- a/Project/Report_documents/Week_1/ReadMe
+++ b/Project/Report_documents/Week_1/ReadMe
@@ -1,1 +1,7 @@
+Deliver a document (PDF) describing the selected dataset. The document must present:
 
+List of team members
+Link to the github repository
+Link to the dataset
+1-2 Paragraph(s) describing the dataset
+2-3 bullet points with potential problems/opportunities
