--- a/Project/Report_documents/Week_3/ReadMe
+++ b/Project/Report_documents/Week_3/ReadMe
@@ -1,2 +1,12 @@
-Deliverable: Python notebook on Github
-Deliverable: Python notebook on Github
+Data Wrangling & Cleaning
+○Find a relevant external dataset
+■Importing the dataset○Minor tasks
+■Summarizing your data for inspection
+■Fixing column name
+■Removing not relevant columns
+■Converting data types
+■Removing duplicates
+○Major tasks
+■Dealing with missing values
+■Dealing with outliers
+■Merging the external datasets
