--- a/Project/Report_documents/Week_3/ReadMe
+++ b/Project/Report_documents/Week_3/ReadMe
@@ -2,7 +2,7 @@ Data Wrangling & Cleaning
   Find a relevant external dataset
     Importing the dataset
   Minor tasks
-    Summarizing your data for inspection
+    ■ Summarizing your data for inspection
     Fixing column name
     Removing not relevant columns
     Converting data types
