--- a/Assignments/250519/ReadMe
+++ b/Assignments/250519/ReadMe
@@ -1,1 +1,8 @@
-
+○ Kaggle Competition (INDIVIDUAL)
+○ Deliverable:
+  ■ Python Notebook (hosted on github) -> submit the link on moodle
+    ● Apply the necessary steps to build a machine learning model and submit the predictions
+      ○ Feature Engineering
+      ○ Model Training
+    ● Criterias○Number of submissions○Score evolution
+      ○ Final notebook
