--- a/Project/Report_documents/Week_5/ReadMe
+++ b/Project/Report_documents/Week_5/ReadMe
@@ -1,1 +1,6 @@
-
+Apply the necessary steps to build a machine learning model and measure the results○
+  Problem definition○
+  Feature Engineering
+  ○ Model Training
+  ○ Model Evaluation
+  ○ Error Analysis
